--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^10.0.5",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
